--- a/front/index.html
+++ b/front/index.html
@@ -90,7 +90,7 @@
                             <p class="text-white animated slideInLeft mb-4 pb-2">Here you can find Most delicacies food
                                 in the world</p>
                             <a href="select.html" class="btn btn-primary py-sm-3 px-sm-5 me-3 animated slideInLeft">Book
-                                Your Meal11111</a>
+                                Your Meal</a>
                         </div>
                         <div class="col-lg-6 text-center text-lg-end overflow-hidden">
                             <img class="img-fluid" src="img/hero.png" alt="">
