--- a/front/index.html
+++ b/front/index.html
@@ -86,7 +86,7 @@
                     <div class="row align-items-center g-5">
                         <div class="col-lg-6 text-center text-lg-start">
                             <h1 class="display-3 text-white animated slideInLeft"> ALRAMADAN Restaurant CHAIN hanen and rimaaaa
-                                jgyj<br>in the
+                               <br>in the
                                 world</h1>
                             <p class="text-white animated slideInLeft mb-4 pb-2">Here you can find Most delicacies food
                                 in the world</p>
