--- a/front/dashbord-mgr.html
+++ b/front/dashbord-mgr.html
@@ -48,7 +48,7 @@
                     <i class="uil uil-files-landscapes"></i>
                     <span class="link-name">Add meal </span>
                 </a></li>
-                <li><a href="">
+                <li><a href="order.html">
                     <i class="fas fa-shopping-cart"></i>
                     <span class="link-name">Orders </span>
                 </a></li>
